базовая верстка, нормализация стилей, css-переменные, шрифты

--- a/index.html
+++ b/index.html
@@ -6,9 +6,52 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <title>Places</title>
+
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&family=Bangers&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="css/variables.css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/normalize.css"
+    />
+    <link
+      rel="stylesheet"
+      href="css/style.css"
+    />
   </head>
   <body>
-    <div>Hello</div>
+    <div class="page">
+      <header class="header">
+        <h1 class="header__title">Places Manager</h1>
+        <h2>Учебный проект: работа с CRUD API для управления геолокациями</h2>
+      </header>
+
+      <div class="container main__container">Main</div>
+
+      <footer class="footer">
+        <div class="footer__text">Places Manager © 2025</div>
+        <div class="footer__author">made by Navrotsky Nikita</div>
+      </footer>
+    </div>
   </body>
 </html>
