--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                   id="place-name"
                   class="form__input"
                   required
-                  value="Новое место"
+                  value="new place"
                 />
               </div>
 
@@ -171,7 +171,7 @@
                   id="place-address"
                   class="form__input"
                   required
-                  value="Ленинский проспект"
+                  value="Lenin street"
                 />
               </div>
 
