Получить место и вывод после этого в алерт. небольшие правки верстки и стилей

--- a/index.html
+++ b/index.html
@@ -49,17 +49,7 @@
       <main class="main">
         <!-- Таблица мест -->
         <div class="main__table">
-          <div class="main-table__header">
-            <span class="main-table__title">Список мест</span>
-            <button
-              class="btn"
-              id="refresh-places"
-              type="button"
-            >
-              <span class="button__icon">↻</span>
-              Обновить
-            </button>
-          </div>
+          <h2 class="main-table__title">Список мест</h2>
 
           <div class="table-wrapper">
             <div>test table</div>
